[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appicongen"
version = "0.2.1"
description = "CLI tool for generating app icon sets for macOS, iOS and watchOS projects"
readme = "README.md"
classifiers = ["Topic :: Utilities"]
dependencies = [
  "Pillow >= 10.4, < 11",
  "numpy >= 2.0, < 3",
]

[project.urls]
Homepage = "https://github.com/fwcd/appicongen"
Repository = "https://github.com/fwcd/appicongen"

[project.scripts]
appicongen = "appicongen:main"

[tool.setuptools.packages]
find = {}

[tool.pyright]
include = ["appicongen"]
