[metadata]
name = appicongen
description = CLI tool for generating app icon sets for macOS, iOS and watchOS projects
url = https://github.com/fwcd/appicongen
version = 0.1.0

[options]
packages = find:
install_requires =
  Pillow >= 9.0.1, < 10

[options.entry_points]
console_scripts =
  appicongen = appicongen:main
